# alf

./: AGENTS.md  CLAUDE.md  Cargo.toml  DECISIONS.md  FORMATS.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
catalog/: README.md
catalog/skills/backend-expert/: SKILL.md
catalog/skills/codebase-navigator/: SKILL.md
catalog/skills/devops-expert/: SKILL.md
catalog/skills/execution-plan/: SKILL.md
catalog/skills/frontend-expert/: SKILL.md
catalog/skills/quality-reviewer/: SKILL.md
catalog/skills/security-expert/: SKILL.md
catalog/skills/understand-the-problem/: SKILL.md
skills/codebase-navigator/: SKILL.md
skills/devops-expert/: SKILL.md
skills/frontend-expert/: SKILL.md
skills/quality-reviewer/: SKILL.md
skills/security-expert/: SKILL.md
skills/understand-the-problem/: SKILL.md
src/: catalog.rs  commands.rs  config.rs  detect.rs  error.rs  fsops.rs  gitexclude.rs  lib.rs  lock.rs  main.rs  manifest.rs  project.rs  scaffold.rs  seeds.rs  skill.rs  version.rs
templates/: AGENTS.md  CLAUDE.md
tests/: cli.rs
