[package]
name = "alf"
version = "0.5.1"
edition = "2021"
description = "Scaffold spec-driven, agentic development environments with zero friction"
license = "MIT"

[[bin]]
name = "alf"
path = "src/main.rs"

[lib]
name = "alf"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
